--- a/Kaiserreich Korean Translation/localisation/KR_Costa_Rica_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Costa_Rica_l_english.yml
@@ -2,21 +2,21 @@ l_english:
 
 ### Parties ###
 COS_totalist_party_long:0 "인민전위당"
-COS_totalist_party:0 "PVP"
+COS_totalist_party:0 "인민전위당"
 COS_syndicalist_party_long:0 "인민전위당"
-COS_syndicalist_party:0 "PVP"
+COS_syndicalist_party:0 "인민전위당"
 COS_radical_socialist_party_long:0 "인민전위당"
-COS_radical_socialist_party:0 "PVP"
+COS_radical_socialist_party:0 "인민전위당"
 COS_social_democrat_party_long:0 "국민공화당"
-COS_social_democrat_party:0 "PRN"
+COS_social_democrat_party:0 "국민공화당"
 COS_social_liberal_party_long:0 "중도파"
 COS_social_liberal_party:0 "중도파"
 COS_market_liberal_party_long:0 "유나이티드 과일 회사"
-COS_market_liberal_party:0 "UFC"
+COS_market_liberal_party:0 "유나이티드 과일 회사"
 COS_social_conservative_party_long:0 "국민공화당"
-COS_social_conservative_party:0 "PRN"
-COS_authoritarian_democrat_party_long:0 "중앙아메리카 커피회사"
-COS_authoritarian_democrat_party:0 "ZKG"
+COS_social_conservative_party:0 "국민공화당"
+COS_authoritarian_democrat_party_long:0 "중앙아메리카 커피 회사"
+COS_authoritarian_democrat_party:0 "중앙아메리카 커피 회사"
 COS_paternal_autocrat_party_long:0 "군사정부"
 COS_paternal_autocrat_party:0 "군사정부"
 COS_national_populist_party_long:0 "카리브 군단"
