--- a/Kaiserreich Korean Translation/localisation/KR_White_Ruthenia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_White_Ruthenia_l_english.yml
@@ -338,7 +338,7 @@ whiteruthenia.47.t:0 "생디칼리스트들이 벨로루시의 권력을 잡다!
 whiteruthenia.47.d:0 "최근 물러난 벨로루시 울라지미르 국왕은 어리석게도 생디칼리스트들이 벨로루시 선거에서 놀라운 승리를 거두도록 허용했습니다! 파머의 우화처럼, 비열한 생디칼리스트들은 울라지미르를 전복시키고 그 나라에서 그를 추방함으로써 그의 순진한 친절에 보답했습니다. 많은 사람들이 벨로루시의 질서를 회복하기 위해 개입할 것을 요구하고 있습니다. 결국, 우리는 서쪽의 동포들과 전쟁을 하면서 중요한 동부 지역에서 붉은색 존재를 용인할 수 없습니다."
 whiteruthenia.47.a:0 "개입하지 마라."
 whiteruthenia.47.b:0 "벨로루시는 넘어지지 말아야 한다!"
-whiteruthenia.48.t:0 "벨로루시가 국제 무대의 입장을 모색하다"
+whiteruthenia.48.t:0 "벨로루시가 인터내셔널 가입을 모색하다"
 whiteruthenia.48.d:0 "압제적인 독일 군주제를 타도하고 생디칼리즘의 깃발 아래 그들의 새로운 국가를 통합한 벨로루시의 한 특사가 오늘 우리 동맹에 동참해 달라고 요청했습니다. 우리와 동맹을 맺고 있는 취약한 동쪽의 측면으로 독일에 적대적인 나라는 우리의 전쟁 노력에 큰 보탬이 될 것입니다."
 whiteruthenia.48.a:0 "클럽에 온걸 환영하오 동무!"
 whiteruthenia.48.b:0 "그들은 돕기에는 너무 멀다."
