--- a/Kaiserreich Korean Translation/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -529,8 +529,8 @@ plcommon.48.a:0 "Revenge!"
 plcommon.49.t:0 "The New Lithuanian Government"
 plcommon.49.d:0 "The LTIP Party took power in the Commonwealth and has restored Lithuania."
 plcommon.49.a:0 "Okay."
-plcommon.50.t:0 "The Mitteleuropa Question"
-plcommon.50.d:0 "With the formation of the new Polish-Lithuanian Commonwealth, our political status in the Mitteleuropa alliance is unclear. While Lithuania was a member of the alliance, Poland was not, and with the combination of our two governments, it seems that there is an opportunity to use Poland's status as a member outside of the alliance to leverage our way out, if we so choose. \n\nHowever, Germany is sure to see an attempt to leave as a threat to their European hegemony, and may take action against us. What should we do?"
+plcommon.50.t:0 "The Reichspakt Question"
+plcommon.50.d:0 "With the formation of the new Polish-Lithuanian Commonwealth, our political status in the Reichspakt alliance is unclear. While Lithuania was a member of the alliance, Poland was not, and with the combination of our two governments, it seems that there is an opportunity to use Poland's status as a member outside of the alliance to leverage our way out, if we so choose.\n\nHowever, Germany is sure to see an attempt to leave as a threat to their European hegemony, and may take action against us. What should we do?"
 plcommon.50.a:0 "We still need German protection."
 plcommon.50.b:0 "We have outgrown this decaying alliance."
 plcommon.51.t:0 "The PLC Joins the Fourth International?"
