--- a/Kaiserreich Korean Translation/localisation/KR_Central_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Central_America_l_english.yml
@@ -1,32 +1,32 @@
 l_english:
 
 ### Parties ###
-CEN_totalist_party_long:0 "Partido Maximista"
-CEN_totalist_party:0 "PM"
-CEN_syndicalist_party_long:0 "Partido Sindicalista"
-CEN_syndicalist_party:0 "PS"
-CEN_radical_socialist_party_long:0 "Partido Nacional Revolucionario"
-CEN_radical_socialist_party:0 "PNR"
-CEN_social_democrat_party_long:0 "Partido Popular"
-CEN_social_democrat_liberal:0 "PT"
-CEN_social_democrat_liberal_long:0 "Partido del Trabajo"
-CEN_social_democrat_party:0 "PP"
-CEN_social_liberal_party_long:0 "Partido Liberal"
-CEN_social_liberal_party:0 "PL"
-CEN_market_liberal_party_long:0 "Partido de Unificación Democratica"
-CEN_market_liberal_party:0 "PUD"
-CEN_social_conservative_party_long:0 "Partido Unionista"
-CEN_social_conservative_party:0 "PU"
-CEN_authoritarian_democrat_party_long:0 "Administración Militar"
-CEN_authoritarian_democrat_party:0 "AM"
-CEN_paternal_autocrat_party_long:0 "Partido de Unificación"
-CEN_paternal_autocrat_party:0 "PU"
-CEN_national_populist_party_long:0 "Partido Nacional"
-CEN_national_populist_party:0 "PN"
+CEN_totalist_party_long:0 "최대주의당"
+CEN_totalist_party:0 "최대주의당"
+CEN_syndicalist_party_long:0 "생디칼리스트당"
+CEN_syndicalist_party:0 "생디칼리스트당"
+CEN_radical_socialist_party_long:0 "국민혁명당"
+CEN_radical_socialist_party:0 "국민혁명당"
+CEN_social_democrat_party_long:0 "인민당"
+CEN_social_democrat_liberal:0 "인민당"
+CEN_social_democrat_liberal_long:0 "노동당"
+CEN_social_democrat_party:0 "노동당"
+CEN_social_liberal_party_long:0 "자유당"
+CEN_social_liberal_party:0 "자유당"
+CEN_market_liberal_party_long:0 "민주연합당"
+CEN_market_liberal_party:0 "민주연합당"
+CEN_social_conservative_party_long:0 "연합당"
+CEN_social_conservative_party:0 "연합당"
+CEN_authoritarian_democrat_party_long:0 "군부"
+CEN_authoritarian_democrat_party:0 "군부"
+CEN_paternal_autocrat_party_long:0 "통일당"
+CEN_paternal_autocrat_party:0 "통일당"
+CEN_national_populist_party_long:0 "국민당"
+CEN_national_populist_party:0 "국민당"
 
 
 ### Decisions ###
-annexation_CEN_CONQ:0 "The Fate of Central America"
+annexation_CEN_CONQ:0 "중앙 아메리카의 운명"
 annexation_CEN_CONQ_desc:0 "We must decide what to do with the people of Central America"
 annexation_CEN_CONQ2:0 "The Fate of Central America"
 annexation_CEN_CONQ2_desc:0 "We must decide what to do with the people of Central America"
