--- a/Kaiserreich Korean Translation/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -7,8 +7,8 @@ CAL_syndicalist_party:0 "미국 사회당"
 CAL_syndicalist_party_long:0 "미국 사회당"
 CAL_radical_socialist_party:0 "미국 사회당"
 CAL_radical_socialist_party_long:0 "미국 사회당"
-CAL_social_democrat_party:0 "농부-노동자당"
-CAL_social_democrat_party_long:0 "농부-노동자당"
+CAL_social_democrat_party:0 "농민-노동자당"
+CAL_social_democrat_party_long:0 "농-노동자당"
 CAL_social_liberal_party:0 "진보당"
 CAL_social_liberal_party_long:0 "진보당"
 CAL_market_liberal_party:0 "공화당"
@@ -156,7 +156,7 @@ PSA_reunited_america_flag:0 "미국은 재통합되었습니다"
 
 
 ### Decisions ###
-USA_civil_war_decisions:0 "Civil War Decisions"
+USA_civil_war_decisions:0 "내전 결정"
 USA_civil_war_decisions_desc:0 "We are fighting for the future of America. Down with the traitors, and up with the stars!"
 
 CAL_civil_war_recovery_decisions:0 "내전으로부터의 회복"
@@ -250,7 +250,7 @@ CAL_defense_logistic_agency:0 "군수국"
 CAL_defense_logistic_agency_desc:0 "America is an enormous country, full of varied terrain. We need to create a centralized logistics board able to coordinate warfare across the varied biomes of America."
 CAL_war_bonds:0 "전쟁 채권"
 CAL_war_bonds_desc:0 "We need adequate funding to properly fight this war. Bonds are a popular way of fundraising, and we can easily promote them through cartoons, films, and other popular mediums."
-CAL_womens_land_army:0 "여성 농경 부대"
+CAL_womens_land_army:0 "여성 "
 CAL_womens_land_army_desc:0 "Women have just as much of a stake in the outcome of this Civil War as men do. We should ensure there are ways for women to assist the war effort as much as possible."
 CAL_marines:0 "해병대 확장"
 CAL_marines_desc:0 "The Marine Corps was the pride of the American military, and one of the few branches not to suffer from the extensive budget cuts of the last few decades. We should build up the remnant of the corps that stayed loyal to our regime into a powerful fighting force."
@@ -267,17 +267,17 @@ CAL_fight_for_america_desc:0 "Freedom, liberty, and democracy are unalienable hu
 ### Navy Focuses ###
 CAL_navy:0 "미 해군"
 CAL_navy_desc:0 "The American navy was once the pride of the world. Yet much of it deserted to the traitors to the east. We should review what forces stayed loyal to our government, so we can best determine how they can serve in this war."
-CAL_great_white_fleet:0 "Great White Fleet"
+CAL_great_white_fleet:0 "대 백색 함대"
 CAL_great_white_fleet_desc:0 "The Great White Fleet was the height to American naval power. We should look back at it for inspiration. A great fleet of battleships and dreadnoughts will ensure we always have naval superiority."
-CAL_protect_american_trade:0 "Protect American Trade"
+CAL_protect_american_trade:0 "미국 무역선단 보호"
 CAL_protect_american_trade_desc:0 "Trade is the lifeblood of America. We should focus our naval doctrine on making sure that it is protected from enemy raids."
-CAL_carrier_projects:0 "Carrier Projects"
+CAL_carrier_projects:0 "항모 계획"
 CAL_carrier_projects_desc:0 "Carriers are the wave of the future. We should invest in their research and construction to better project naval power."
-CAL_battle_ships:0 "Battleships Development"
+CAL_battle_ships:0 "전함 개발"
 CAL_battle_ships_desc:0 "Battleships are the king of the high seas. We should start research into new models with bigger guns and better anti-air protection."
-CAL_battle_cruisers:0 "Battle-Cruiser Development"
+CAL_battle_cruisers:0 "순양전함 개발"
 CAL_battle_cruisers_desc:0 "Battlecruisers present a middle balance between heavy battleships and faster cruisers. We should ensure we have some in our navy."
-CAL_coast_guard:0 "U.S Coast Guard"
+CAL_coast_guard:0 "미국 해상방위대"
 CAL_coast_guard_desc:0 "Restoring the Coast Guard will ensure that trade moves smoothly, criminals are stopped at sea, and those in danger are rescued."
 CAL_light_cruisers:0 "Light-Cruiser Development"
 CAL_light_cruisers_desc:0 "Lighter cruisers are important in anti-air operations, as well as attacking enemy destroyers and submarines. We should ensure our navy has a handful of these in order to stay balanced."
@@ -285,13 +285,13 @@ CAL_naval_aviation:0 "Naval Aviation"
 CAL_naval_aviation_desc:0 "Naval aviation is the future of warfare on the high seas. We should ensure that our air designs are capable of being launched from carriers and destroying the enemy fleet without even endangering our own."
 CAL_expand_dockyards:0 "Expand Dockyards"
 CAL_expand_dockyards_desc:0 "Our dockyards are somewhat inadequate to fight a war on their own. We need to ensure that new naval production facilities are constructed to support the war effort."
-CAL_submarines:0 "Submarine Development"
+CAL_submarines:0 "잠수함 "
 CAL_submarines_desc:0 "Submarines allow us to wreak havoc on enemy shipping and heavy ships. We should ensure that our designs stay up to date against enemy destroyers and anti-submarine tactics."
-CAL_liberty_ships:0 "Liberty Ships"
+CAL_liberty_ships:0 "리버티선"
 CAL_liberty_ships_desc:0 "Our shipyards, previously dedicated to commercial shipping, can easily be converted to produce massive numbers of convoys to supply our allies around the world."
-CAL_maratime_industry:0 "Maritime Industry"
+CAL_maratime_industry:0 "해양산업"
 CAL_maratime_industry_desc:0 "While not nearly as historically significant as on the East Coast, we still have a strong legacy of commercial shipping. We should ensure that this industry supports the war effort."
-CAL_new_admirals:0 "New Admirals"
+CAL_new_admirals:0 "새 제독들"
 CAL_new_admirals_desc:0 "Many admirals deserted to the traitors to the east. We should train a new generation of naval leaders to ensure our continued maritime dominance."
 CAL_expand_the_waves:0 "Expand the WAVEs"
 CAL_expand_the_waves_desc:0 "Women can serve many auxiliary roles in the navy, freeing up men for combat duty. While this might be socially controversial, it will significantly help the war effort."
@@ -353,9 +353,9 @@ CAL_hays_code:0 "Hay's Code"
 CAL_hays_code_desc:0 "While everyone enjoys a good film now and then, the unchecked moral excesses of Hollywood need to be clamped down on. A strict code of conduct for actors and producers is required to avoid the spread of syndicalist messaging in films."
 CAL_american_laisze_faire:0 "Laissez Faire Economics"
 CAL_american_laisze_faire_desc:0 "Too much government intervention will only harm rebuilding. We need to ensure that we are not overly interfering in our economy as it struggles to rebuild from the Civil War."
-CAL_moral_education:0 "Moral Education"
+CAL_moral_education:0 "윤리교육"
 CAL_moral_education_desc:0 "Higher education has long been a bastion of the elite, and it should be kept that way. The prestigious halls of the Ivy Leagues are no place for those not prepared. They should be reserved for the future leaders of America, so they can receive the best education possible."
-CAL_new_american_century:0 "New American Century"
+CAL_new_american_century:0 "새로운 미국의 세기"
 CAL_new_american_century_desc:0 "In the time since our election, we have created a foundation to restore America to greatness. Rebuilding from the Civil War will take time, but we now out to the world, ready for a new century of greatness."
 ### Market Liberals ###
 CAL_social_gospel:0 "Social Gospel"
@@ -372,11 +372,11 @@ CAL_market_liberals_in_power:0 "Republicans elected"
 CAL_market_liberals_in_power_desc:0 "The Republican Party, champions of free trade, deregulation, and the financial sector, have won the [GetYear] elections. Citizens can expect to see lower taxes, better prices, and a return of the can-do individualist spirit of American capitalism."
 CAL_settelment_movement:0 "Settlement Movement"
 CAL_settelment_movement_desc:0 "The Settlement Movement was popular in pre-Weltkrieg England and America, and focused on bringing the rich and poor together in 'settlement houses' to better understand each other. We should encourage a revival of this movement in these difficult social times."
-CAL_small_business_support:0 "Support Small Business"
+CAL_small_business_support:0 "영세 사업 지원"
 CAL_small_business_support_desc:0 "Small businesses were the backbone of the American economy, until many were destroyed in the Civil War. We should look into tax incentives and other strategies to restore small business confidence."
-CAL_business_grants:0 "Business Grants"
+CAL_business_grants:0 "사업 보조금"
 CAL_business_grants_desc:0 "Larger business also suffered in the Civil War, and just like smaller businesses need government intervention to be fully restored to their pre-war profitability."
-CAL_hollywood_glamor:0 "Hollywood Support"
+CAL_hollywood_glamor:0 "할리우드 지원"
 CAL_hollywood_glamor_desc:0 "Many prominent Hollywood actors and producers support the Republican cause. We should enlist them in creating films that promote Republican values to the rest of the country."
 CAL_education_philanthropy:0 "Education Philanthropy"
 CAL_education_philanthropy_desc:0 "The richest businessmen usually attended a small set of elite universities, like the Ivy Leagues, Stanford, and the University of Chicago. We should create scholarships to ensure that those less fortunate can also attend these beacons of learning."
@@ -387,11 +387,11 @@ CAL_progressive_taxation:0 "Liberal Taxation"
 CAL_progressive_taxation_desc:0 "Ideally, taxation should strike a balance between allowing people to still have enough money to spend on consumer and luxury goods, and supporting government programs. The Progressive Party's tax plan ensures this will be the case."
 CAL_securities_act_desc:0 "Many are fearful of the large-scale confiscations of wealth carried out by the CSA and AUS during the Civil War. We need to enact legislation to reassure the people that their property is theirs alone."
 CAL_securities_act:0 "Securities Act"
-CAL_gospel_of_wealth:0 "Gospel of Wealth"
+CAL_gospel_of_wealth:0 "배금주의 풍토"
 CAL_gospel_of_wealth_desc:0 "A prosperous economy will lift everyone's boats. We need to ensure that the highest executives and the poorest farmers are both prospering through tax reform and other legislation."
 CAL_trust_busting:0 "Trust Busting"
 CAL_trust_busting_desc:0 "Large trusts were a major rallying cry for the CSA. We need to break them up to prevent radicalism from sprouting its ugly head again."
-CAL_free_trade1:0 "Support Free Trade"
+CAL_free_trade1:0 "자유무역 지지"
 CAL_free_trade1_desc:0 "Free trade is the building block of a strong economy. We should ensure that tariffs are struck down, and that barriers to free trade are lifted with our allies and neutral countries around the globe."
 CAL_social_liberals_in_power:0 "Progressives Elected"
 CAL_social_liberals_in_power_desc:0 "The Progressive Party have won the [GetYear] election! Their agenda is a continuation of the pre-Civil War progressive wing of the Republican party, prioritizing liberal free trade, progressive social policies, and a moderate welfare state."
@@ -401,11 +401,11 @@ CAL_efficiency_movement:0 "Efficiency Movement"
 CAL_efficiency_movement_desc:0 "30 years ago in the height of the Progressive Era, the Efficiency Movement tried to eliminate superfluous waste from the household and the workplace. With the economy still recovering from the Civil War, we should try and bring the movement back into the public consciousness."
 CAL_chautauqua:0 "Chautauqua"
 CAL_chautauqua_desc:0 "The Chautauqua Institution is a prominent retreat in upstate New York that promotes progressive values. We should introduce its leading thinkers to the national stage, so they can better promote their theories."
-CAL_four_freedoms:0 "Four Freedoms"
+CAL_four_freedoms:0 "네가지 자유"
 CAL_four_freedoms_desc:0 "Americans enjoy four key freedoms that most of the world lack. The freedom of speech, the freedom of worship, the freedom from want, and most importantly, the freedom from fear. With our Civil War now concluded, we must make sure all our citizens, no matter their skin color or religion, can enjoy these freedoms."
-CAL_liberal_unions:0 "Support Liberal Unions"
+CAL_liberal_unions:0 "자유계열 노조 지원"
 CAL_liberal_unions_desc:0 "Not all unions are nests of syndicalism. Some actually stand for the betterment of the working class, rather than just advancing the selfish goals of their leaders. We should support these unions, both to protect our workers and undercut syndicalists still hiding in the country."
-CAL_new_progressive_era:0 "New Progressive Era"
+CAL_new_progressive_era:0 "새 진보의 시대"
 CAL_new_progressive_era_desc:0 "Since our election, America has enjoyed a period of growth unheralded in its history. Rising from the ashes of the Civil War, we can now turn our gaze to spreading progressivism around the world."
 ### Social Democrats ###
 CAL_new_nationalism:0 "New Nationalism"
