--- a/Kaiserreich Korean Translation/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -250,7 +250,7 @@ CAL_defense_logistic_agency:0 "군수국"
 CAL_defense_logistic_agency_desc:0 "America is an enormous country, full of varied terrain. We need to create a centralized logistics board able to coordinate warfare across the varied biomes of America."
 CAL_war_bonds:0 "전쟁 채권"
 CAL_war_bonds_desc:0 "We need adequate funding to properly fight this war. Bonds are a popular way of fundraising, and we can easily promote them through cartoons, films, and other popular mediums."
-CAL_womens_land_army:0 "여성 "
+CAL_womens_land_army:0 "여성 육군"
 CAL_womens_land_army_desc:0 "Women have just as much of a stake in the outcome of this Civil War as men do. We should ensure there are ways for women to assist the war effort as much as possible."
 CAL_marines:0 "해병대 확장"
 CAL_marines_desc:0 "The Marine Corps was the pride of the American military, and one of the few branches not to suffer from the extensive budget cuts of the last few decades. We should build up the remnant of the corps that stayed loyal to our regime into a powerful fighting force."
