--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -622,8 +622,8 @@ unionstate.13.d:0 "Although the work of the Southern Tenant Farmers Union is wel
 unionstate.13.a:0 "Say hello to the AFTU"
 
 unionstate.14.t:0 "휴고 블랙의 진실"
-unionstate.14.d:0 "When the Honorable Hugo Black was appointed office on the coattails of Huey's victory, very few had bothered to check his past associations. This is why today's newspaper shocked Huey Long so greatly. An expose' found Hugo Black's Klan membership. Hugo Black responded to the press by profusely apologizing, and saying that his membership was just perfunctory in order to get elected in Alabama. While Black's judicial record does paint him as a liberal, this flies directly in the face of Long's anti-Klan campaign. Should we fire Hugo Black?"
-unionstate.14.a:0 "An intolerable association"
+unionstate.14.d:0 "명예로운 휴고 블랙이 휴이의 내전 승리에 편승하여 공직에 임명되었을 때, 몇몇 사람들은 그의 과거 행적을 확인하는데 애를 먹었습니다. 오늘자 신문에 대서특필된 휴고의 과거 행적에 대한 폭로는 휴이 롱을 깜짝 놀라게 했습니다. 폭로자들은 휴고 블랙이 KKK와 유대를 가지고 있었다고 말합니다. 휴고 블랙은 앨라배마에서 당선되기 위해 KKK와의 유대는 그저 형식적인 것이라고 말하며 언론을 통해 진심으로 사과했습니다. 그동안의 블랙의 판결문들은 그가 진보주의자임을 말해주지만, 이 폭로들은 롱의 반 KKK 정책과 직결됩니다. 휴고 블랙을 파직시켜야할까요?"
+unionstate.14.a:0 "용납할 수 없다"
 unionstate.14.b:0 "사람은 변할 수 있다"
 
 unionstate.15.t:0 "부 공유 협회의 분열"
@@ -632,7 +632,7 @@ unionstate.15.a:0 "타운센드와 함께한다"
 unionstate.15.b:0 "맥매스와 함께한다"
 
 unionstate.16.t:0 "맥태규 극장판이 개봉되다"
-unionstate.16.d:0 "A tale of greed and betrayal that once littered America is now encapsulated in the new film McTeague. A social commentary by director Erich von Stroheim about the corrupting power of wealth is seen by many as a parable to the state of America before the Civil War. This massive four-hour epic film had it's ending altered from the original book, where a kind stranger intervenes in the death struggle of McTeague and whisks him away from Death Valley back to civilization."
+unionstate.16.d:0 "한때 미국을 어지럽혔던 탐욕과 배신에 대한 이야기들은 이제 새 영화 맥태규에 녹아들었습니다. 부의 부패에 대한 에리히 폰 스트로하임 감독의 사회적 논평을 많은 사람들은 내전 이전의 미국 정부에 대한 비유로 여깁니다. 이 4시간짜리 거대한 서사적 영화는 원작과는 다른 결말을 보이는데, 한 친절한 지나가던 사람이 맥태규를 죽음의 문턱에서 구해내고 문명으로 회귀시킨다는 것입니다."
 unionstate.16.a:0 "낮잠 잘 잤다"
 
 unionstate.17.t:0 "사회주의 비밀결사에 대한 고발"
@@ -646,10 +646,10 @@ unionstate.18.a:0 "아이들이 좋아할 것이다"
 unionstate.19.t:0 "갱스터의 천국"
 unionstate.19.d:0 "뉴욕과 북부의 클럽들에서 가장 인기 있는 재즈 노래들 중 하나는 휴이 롱과 그 지지자들을 조폭들과 비교해서 풍자한 노래인 '갱단의 낙원'입니다. 그 노래와 비슷한 부류의 다른 노래들은 최근 뉴올리언스의 클럽 장으로 전파되고 있습니다. 이에 대한 휴이 롱의 반응은?"
 unionstate.19.a:0 "재미있군"
-unionstate.19.b:0 "그 누구도 킹피쉬를 비웃지 못할 것이다"
+unionstate.19.b:0 "누가 킹피쉬를 비웃었는가"
 
-unionstate.20.t:0 "Black No More by George Schuyler"
-unionstate.20.d:0 "The imaginations and political opinions of Americans were piqued when Black No More appeared on bookshelves. The book a science fiction about a scientist that invents a machine that can turn a black man white. This invention turns society upside down, and challenges ideas on race and the one drop principle. The science fiction with the revelation that all the characters both white and black are mixed race, and the entire principle of racial supremacy collapses. While there were concerns that the book would be censored due to its veiled attacks against both white supremacists and black leaders, it appears that Huey Long enjoys the book. "
+unionstate.20.t:0 "조지 스카일러의 '더이상 흑인이 아니야'"
+unionstate.20.d:0 "'더이상 흑인이 아니야'라는 책이 서점에 등장했을 때 미국인의 상상력과 정치적 견해는 비난받았습니다. 이 책은 흑인을 백인으로 만들 수 있는 기계를 고안한 과학자에 관한 공상과학 소설입니다. 이 발명은 기존의 사회적 통념을 깨고, 인종과 순혈주의에 정면도전합니다. 백인과 흑인이 사실은 같은 인류라는 사실을 폭로한 공상과학소설은 인종차별주의를 기저부터 무너뜨립니다. 백인 우월주의자와 흑인 지도자들에 대한 은근한 공격으로 인해 이 책이 검열될 것이라는 우려가 있었지만, 휴이 롱은 이 책을 즐겨 읽는다고 합니다."
 unionstate.20.a:0 "As long as it doesn't offend me"
 
 unionstate.21.t:0 "롱 대통령 각하께서 사망하셨다, 새로운 롱 대통령 각하 만세!"
@@ -730,21 +730,21 @@ unionstate.36.d:0 "The Committee is in agreement on the future of the 17th Amend
 unionstate.36.a:0 "As our Founding Fathers intended"
 
 unionstate.37.t:0 "애국심 또는 이익"
-unionstate.37.d:0 "A conflict of interests has arisen between the market and the War Powers Committee. A recent speech given by Roger Babson highlighted the hypocrisy of multinational corporations that both claim to be patriotic while also opening factories in syndicalist nations in Europe. Our own Fred Koch fired back by stating that the market and American people want their businesses to succeed as an extension of patriotism. While the War Powers Committee leads several multinational corporations, we have noticed a strong uptick in domestic sales that could remove the risk of retreating from foreign markets. It is time for the Committee to settle this national debate. "
+unionstate.37.d:0 "시장경제와 비대위 사이에 오해가 발생했습니다. 로저 뱁슨은 최근 연설에서 다국적 기업들이 애국적이라고 주장하는 동시에 유럽의 생디칼리스트 국가에 공장을 열기도 했다며 그 위선을 꼬집었습니다. 우리측 인사인 프레드 코치는 시장경제와 미국인들은 다국적 기업들의 사업이 애국심의 증대로 성공하기를 원한다고 말함으로써 반격했습니다. 비대위가 여러 다국적 기업을 지도하고 있는 동안, 우리는 해외 시장의 쇠퇴의 위험성을 상쇄할 수 있는 국내 판매량의 강한 상승세를 목격했습니다. 이제 비대위가 이 국가적 논쟁을 해결할 때입니."
 unionstate.37.a:0 "사업이야말로 우리의 진정한 사업이다"
 unionstate.37.b:0 "애국심이야말로 우리의 진정한 사업이다"
 
 unionstate.38.t:0 "The Second American Plan"
-unionstate.38.d:0 "Although the syndicalists are defeated and their members have gone to ground, there still remains the threat of union growth Huey Long foolishly promised. A proposal from Congress may be able to remedy this. The original American Plan was legislation proposed during the Wilson administration to guarantee employers ability to challenge Union activities. The foolish Congress under McAdoo failed to properly ensure this right, but the new American Republic will correct that. The American Plan will allow individual states to pass right-to-work laws and authorizes the federal courts to prosecute union activity violating those laws."
+unionstate.38.d:0 "비록 빨갱이들이 패배하고 물러났지만, 어리석은 휴이 롱이 약속한 노조 성장의 위협은 여전히 남아있습니다. 의회의 제안을 통해 이 사태를 해결할 수 있을 것입니다. 원래 아메리카 플랜은 고용주가 노조 활동에 정면도전할 수 있도록 보장하기 위해 윌슨 행정부 동안 제안되었던 법률이었습니다. 맥아두 하의 어리석은 의회는 이 권리를 제대로 보장하지 못했지만, 새로운 공화국은 이를 바로잡을 것입니다. 아메리카 플랜은 개별 주들이 노동권리법을 통과시키고 연방 법원이 법을 위반하는 노조 활동을 기소하도록 승인할 것입니다."
 unionstate.38.a:0 "Business Rights not Union Rights "
 
 unionstate.39.t:0 "비상대권위원회 vs 국회"
-unionstate.39.d:0 "A meeting today with the Committee and several Congressmen friendly to our cause was held to address the future of representation in the Presidential Cabinet. The fear that the political spotlight the War Powers Committee is in by holding Cabinet positions has two possible solutions. The first is to coordinate with Congress to push through a law to reorganize the Presidential Cabinet to officially become the War Powers Committee. The second is to appoint several of our loyalist politicians from Congress to appease prying eyes and keep the stability our new American Republic needs. Either way, our executive power is still secure. "
+unionstate.39.d:0 "오늘 비대위와 우리의 대의에 우호적인 몇몇 의원들과의 회의가 대통령 내각의 대의명분의 미래를 다루기 위해 열렸습니다. 내각의 지위를 유지함으로써 비대위가 정치적으로 주목받는다는 두려운 사실에 대한 두 가지 가능한 해결책이 있습니다. 첫째는 비대위를 공식화하기 위해 대통령 내각을 재편성하는 법안을 통과시키기 위해 의회와 협력하는 것입니다. 두번째는 의회로 하여금 우리에게 충성스런 정치인들을 임명하여 우리의 새로운 공화국이 필요로 하는 안정을 유지토록 하는 것입니다. 어느 방법을 쓰든 간에, 우리의 행정권은 안전합니다."
 unionstate.39.a:0 "비상대권내각"
 unionstate.39.b:0 "의원들이 제 역할을 하도록 하라"
 
 unionstate.40.t:0 "NAACP Declares the government Illegitimate"
-unionstate.40.d:0 "In the wake of the devastating civil war, the future of African American rights fought so long for is again threatened. Initial assurances of civil protection by Huey Long kept many from the streets as socialists and federalists roiled. There were even planned meetings in New York City for Huey Long to directly address civil rights concerns before that fateful day. Now with Huey Long gone, all illusions of safety are dead. Walter Francis White, along with several high ranking members of the NAACP, have declared the new America illegitimate. Many of them now prepare to emigrate to Canada and to other countries as Marcus Garvey did and so many others did during slavery."
+unionstate.40.d:0 "파괴적인 내전의 여파로 오랫동안 투쟁해온 흑인들의 권리와 미래가 다시 위협받고 있습니다. 처음에 휴이 롱의 시민보호기동대들은 길거리를 돌아다니는 사회주의자들과 연방주의자들을 막아냈습니다. 심지어 롱은 실종 당일 직전에도 인권 문제를 직접적으로 다루기 위해 뉴욕에서 일련의 회의를 계획했습니다. 그러나 휴이 롱이 실종되면서 보호에 대한 모든 환상은 사라졌습니다. 월터 프란시스 화이트를 비롯한 흑인 인권단체의 몇몇 지도자들은 새로운 미국을 불법이라고 선언했습니다. 이들 중 많은 사람들은 마커스 가비가 그랬던 것처럼 캐나다와 다른 나라로 이민갈 준비를 하고 있고, 다른 많은 사람들도 사실상의 노예제가 실행된다면 그렇게 할 것입니다."
 unionstate.40.a:0 "So be it"
 
 unionstate.41.t:0 "어머니 운동과 페미니스트들이 충돌하다"
@@ -827,19 +827,19 @@ unionstate.56.b:0 "충성스러운 버틀러"
 unionstate.56.c:0 "두번째 선지자 스미스"
 
 unionstate.57.t:0 "Officiate Warren G. Harding as Black"
-unionstate.57.d:0 "The official records in the United States has always been biased in favor of the ruling party. Once in office, Thomas Jefferson slandered the memory of the great patriot John Adams and fooled subsequent generations into believing that his love for Nativism was tyranny. Now we must erase the great lie perpetrated by presidential candidate and Governor of Ohio Warren G. Harding to hide his black ancestry. We have the papers to prove that beyond a shadow of a doubt that Harding's father was a black man and therefore complicit in a worldwide conspiracy against the Commonwealth."
-unionstate.57.a:0 "Take That Harding!"
+unionstate.57.d:0 "미국의 공식적 역사 기록은 항상 여당에 유리하게 편향되게 서술되었습니다. 한 때 취임한 토마스 제퍼슨은 위대한 애국자 존 아담스에 대한 기억을 갉아먹고 다음 세대를 속여 아담스의 우생학에 대한 사랑이 독재적이라고 믿게 만들었습니다. 이제 우리는 오하이오의 워렌 G 하딩 주지사가 저지른 큰 거짓말을 지워야 합니다. 우리는 하딩의 아버지가 흑인이었고 따라서 미연방국에 대한 전세계적인 음모에 연루되었다는 것을 의심할 여지가 없도록 증명할 서류를 가지고 있습니다."
+unionstate.57.a:0 "이거나 먹어라!"
 
 unionstate.58.t:0 "음향과 분노 극장판"
 unionstate.58.d:0 "현 시대의 유명한 작가 윌리엄 포크너의 작품인 음향과 분노가 극장에서 비평가들의 찬사를 받았습니다. 대부분의 비평가들은 아낌없이 주는 아들 제이슨과 행복한 컴프슨 가족에 대한 영화 속의 묘사를 높이 평가해왔습니다. 영화 속에서 제이슨은 삶의 고통에서 형 베냐민을 구하기 위해 힘들게 번 재산을 희생하고 그의 동생 쿠엔틴을 불모지에 보내면서 가족의 명예를 보전합니다. 그러나 그의 여조카인 쿠엔틴 양이 가족의 재산을 사사롭게 취하고 마을을 떠날 때 그에게 재앙이 닥쳤습니다. 일부 비평가들은 그 영화가 장난으로 일관되었고 실제로 컴프슨 가족으로 대표되는 남부 사회의 결점을 강조하고 있다고 봅니다. 이 해석을 옹호하는 사람들은 작가 윌리엄 포크너의 진보적인 기질을 그 근거로 듭니다. 그러나 이런 논평들은 모두에게 잘 알려진 불평등 옹호론자들로부터 나옵니다."
 unionstate.58.a:0 "내가 만들어도 이것보단 잘 만들겠다!"
 
 unionstate.59.t:0 "흑인교육법"
-unionstate.59.d:0 "The wave of public education changes implemented by Pelley in order to solidify Christian Identity into the America youth is nearly complete. his final act which passed with unanimous approval by the shell of Congress is the Black Education Act. The Black Education Act totally redefines education practices for ethnic minority communities and in particular African-Americans. Notably it focused the education of African-Americans for their role as labors and distances themselves from older notions of religious unity across races. As part of his speech announcing the law, he famously stated, 'There is no place for the Negro in the Anglo Saxon community above the level of laborer. What is the use of teaching the Negro child mathematics when it cannot use it in practice?'. "
+unionstate.59.d:0 "미국 청년들의 기독교 정체성을 확고히 하기 위해 펠리에 의해 시행된 공교육의 물결은 거의 막바지에 이르렀습니다. 의회가 만장일치로 통과시킨 펠리의 마지막 법안은 흑인교육법입니다. 흑인 교육법은 소수민족들과 특히 흑인의 교육 관행을 완전히 뒤집어버리고 있습니다. 특히 흑인들에게는 노동력 교육에 초점이 맞춰지고 있으며, 여러 인종간의 종교적 통합이라는 오래된 개념과는 거리가 멀어 보입니다. 법안을 발표하는 연설에서 펠리는 '앵글로색슨 공동체는 흑인 노동자의 수준보다 높다. 실제로 흑인 아동들에게 그들이 이해할 수 없는 수학을 가르치는게 무슨 소용이 있겠는가?'라고 발언했습니다."
 unionstate.59.a:0 "그들에게 적합한 교육을 시켜라"
 
 unionstate.60.t:0 "블랙벨트법"
-unionstate.60.d:0 "One of the more controversial acts that Pelley is proposing is to extend the 1899 Indian Appropriations Act into the African-American community. The proposed Black Belt Act would make communities in the South with majority African-American populations into a reserved space with independent public services. At least on paper the Silver Legion claims these areas will be administered by African-Americans under the regime's jurisdiction, similar to the Bureau of Indian Affairs. Moreover the Act would strip citizenship and any previous common-wealth to African-Americans nationwide. However, there comes even from our loyal members murmurs that a whites within the Black Belt would also lose their rights. What shall become of this act?"
+unionstate.60.d:0 "펠리가 제안한 법안 중 가장 논란이 되는 것은 1899년의 인디언 수용법을 흑인사회로 확대하자는 것입니다. 제안된 블랙벨트법은 많은 흑인이 거주하는 남부의 지역사회를 독립적인 공공기관이 있는 지정된 장소로 만들 것입니다. 은색 군단은 이 지역들이 인디언 수용법의 사례와 비슷하게 -서류상으로는- 정부 관할 하에 있는 흑인들에 의해 관리될 것이라고 주장합니다. 게다가 이 법은 미국 전역의 흑인들의 시민권과 공공복지권을 박탈할 것입니다. 그러나 몇몇 우리의 충성스런 군단원들이 마음속으로 흑인 거주지 안에 거주하는 백인들 또한 권리를 잃게 될 것이라고 비판하고 있다고 합니다. 이 법안은 어떻게 될까요?"
 unionstate.60.a:0 "지금부터 분리를, 영원한 분리를"
 unionstate.60.b:0 "지금은 아니다, 아마도 나중에"
 
@@ -851,8 +851,8 @@ unionstate.62.t:0 "형벌"
 unionstate.62.d:0 "13번째 헌법 개정안은 전국적으로 노예제도를 불법으로 만들었습니다. 그러나, 개정안은 범죄에 대한 처벌로서 비자발적인 노예형을 허용하고 있습니다. 미 의회가 통과시킨 형법으로 명명된 이 새로운 명령은 도덕적 범죄에 대한 선고 형량을 늘리고 노동력을 산업에 더 많이 활용할 수 있게 해 주었습니다. 이 형벌 노동자는 흑인의 투표 시도를 불법화하는 다양한 흑인 법령을 부활시킴으로써 힘을 얻었습니다. 펠리가 라디오로 전하는 떠들썩한 연설들은 노예제도가 돌아왔다는 앞으로 펼쳐질 진실을 혼란스럽게 하기 위함입니다."
 unionstate.62.a:0 "봉사하라"
 
-unionstate.63.t:0 "The Third Great Migration"
-unionstate.63.d:0 "Those thousands of African-Americans that left America before the civil war are being joined by hundreds of thousands more fleeing Pelley's terror. Groups like the International Labor Defense and the NAACP are now working together with the Red Cross to evacuate the masses of people struggling to remain free. To the Silver Legion and their leaders, this plays into a longstanding fear of a united front against their rule. At the same time, the fewer the dissidents internally the safer loyal Legionaries can sleep. The question is what shall we do. Shall we let them leave or shall we keep them here? "
+unionstate.63.t:0 "세번째 대이민"
+unionstate.63.d:0 "내전 이전부터 미국을 떠난 수천 명의 흑인들은 펠리의 폭정에서 도망치는 수십만 명의 미국인들과 합류하고 있습니다. 국제노동변호기구와 흑인 인권단체와 같은 단체들은 현재 적십자사와 협력하여 자유를 위해 애쓰고 있는 사람들을 대피시키고 있습니다. 은색 군단과 그 지도부는 이들이 은색 군단의 통치에 대항하여 연합 전선을 형성할까봐 오랫동안 두려워해 왔습니다. 동시에 국내의 반체제 인사들이 적어진다는 것은 우리의 충신들이 거리낌없이 활동할수 있다는 것을 의미합니다. 문제는 우리가 어떻게 하느냐입니다. 저들을 내버려 둘까요 아니면 도망가지 못하게 할까요?"
 unionstate.63.a:0 "미국의 좀벌레를 빼낼 뿐이다"
 unionstate.63.b:0 "서둘러 멈춰라!"
 
